validacion de coverage en en pipeline

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,10 +29,14 @@ jobs:
           npm install -g jest
           jest --coverage --silent
           coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
+          
+          # Redondear el porcentaje de cobertura
+          coverage=$(echo "$coverage * 100" | bc | awk '{print int($1)}')
 
-          if [ "$(echo "$coverage >= 40" | bc -l)" -eq 1 ]; then
+          if [ "$coverage" -ge 40 ]; then
             echo "Code coverage is greater than or equal to 40%."
           else
             echo "Code coverage is less than 40%. Exiting with failure."
             exit 1
           fi
+
