--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,12 +28,11 @@ jobs:
         run: |
           npm install -g jest
           jest --coverage --silent
-          coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "strong.*pct" | grep -Eo "[0-9]+\.[0-9]+")
-          
-          if (( $(echo "$coverage >= 10" | bc -l) )); then
-            echo "Code coverage is greater than or equal to 40%."
+          coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
+          if (( $(echo "'$coverage' >= 40" | bc -l) )); then
+            echo "La cobertura de código es mayor al 40%."
           else
-            echo "Code coverage is less than 40%. Exiting with failure."
+            echo "La cobertura de código es menor al 40%. Saliendo con error."
             exit 1
           fi
 
