--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,11 +28,7 @@ jobs:
         run: |
           npm install -g jest
           jest --coverage --silent
-
-          coverage=$(cat ./coverage/lcov-report/index.html | grep -oP 'Statements.*?(\d+\.\d+)%' | grep -oP '\d+\.\d+')
-
+          coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "strong.*pct" | grep -Eo "[0-9]+\.[0-9]+")
           echo "Porcentaje de cobertura: $coverage%"
-
-          
           
 
