--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,4 @@ jobs:
         run: |
           npm install -g jest
           jest --coverage --silent
-          coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "strong.*pct" | grep -Eo "[0-9]+\.[0-9]+")
-          echo "Porcentaje de cobertura: $coverage%"
-          
-
+          coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
