--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,3 +29,4 @@ jobs:
           npm install -g jest
           jest --coverage --silent
           coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
+          echo "Cobertura: $coverage%"
