validacion de coverage en en pipeline

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,9 @@ jobs:
           jest --coverage --silent
           coverage=$(cat ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
           echo "Cobertura: $coverage%"
+          if (( $(echo "$coverage > 40" | bc -l) )); then
+            echo "La cobertura es mayor al 40%, todo está bien."
+          else
+            echo "Error: La cobertura es menor o igual al 40%."
+            exit 1  # Salir con código de error
+          fi
