--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
           npm install -g jest
           jest --coverage --silent
           
-          coverage=$(tail -n 1 ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
+          coverage=$(sed -n '4p' ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
 
           echo "Cobertura: $coverage%"
 
