--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,8 @@ jobs:
           npm install -g jest
           jest --coverage --silent
           
-          coverage=$(sed -n '4p' ./coverage/lcov-report/index.html | grep -Eo "data-value=\"[0-9]+.[0-9]+\"" | cut -d'"' -f2)
+          
+          coverage=$(grep -oP 'All files</h1>\s*<div class='\''fl pad1y space-right2'\''>\s*<span class='\''strong'\''>\K\d+\.\d+' ./coverage/lcov-report/index.html)
 
           echo "Cobertura: $coverage%"
 
@@ -37,7 +38,7 @@ jobs:
             echo "La cobertura es mayor al 40%, todo está bien."
           else
             echo "Error: La cobertura es menor o igual al 40%."
-            exit 1  # Salir con código de error
+            exit 1  
           fi
 
           echo "::set-output name=coverage::$coverage"
