validacion de coverage en en pipeline

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "check-coverage": "npx jest --coverageThreshold=branches=60,function=60,lines=60,statements=60"
+    "check-coverage": "npx jest --coverageThreshold=branches=60,function=60,lines=60,statements=60",
+    "check-coverage-deploy":"npx jest --coverageThreshold=branches=40,function=40,lines=40,statements=40"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
