--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,12 @@ jobs:
         run: npm install --no-audit --no-fund --no-optional
 
       - name: Run Tests
+        id: run-tests
         run: npm test
 
       - name: Check coverage threshold
+        if: steps.run-tests.outcome == 'success'
         run: npm run check-coverage-deploy
+      
+
+    
