--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,10 +22,18 @@ jobs:
         run: npm install --no-audit --no-fund --no-optional
 
       - name: Run Tests
+        id: run-tests
         run: npm test
 
       - name: Check coverage threshold
+        if: steps.run-tests.outcome == 'success'
         run: npm run check-coverage
 
-          
-          
+  stop-on-failure:
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ needs.test.result != 'success' }}
+    
+    steps:
+      - name: Stop Pipeline on Failure
+        run: exit 1
