--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "check-coverage": "npx jest --coverageThreshold=branches=60,function=60,lines=60,statements=60",
-    "check-coverage-deploy":"npx jest --coverageThreshold=branches=40,function=40,lines=40,statements=40"
+    "check-coverage-deploy": "npx jest --coverageThreshold=branches=40,function=40,lines=40,statements=40"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/terminus": "^10.2.3",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.2.0",
