--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,13 @@ jobs:
         if: steps.run-tests.outcome == 'success'
         run: npm run check-coverage-deploy
 
-      - name: Login to Docker Hub
-        if: steps.check-coverage.outcome == 'success'
+      - name: Login to Azure Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: wwwutso.azurecr.io
+          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+      - name: Push to Azure Registry
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push Docker Image
-        if: steps.check-coverage.outcome == 'success'
-        run: |
-          docker build -t santiosorio1357/api_devops:latest .
-          docker push santiosorio1357/api_devops:latest
-          
+          docker build . -t wwwutso.azurecr.io/wwwutso:latest
+          docker push wwwutso.azurecr.io/wwwutso:latest
