--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,12 @@ on:
     types:
       - completed
 
-env:
-  DESIRED_ENVIRONMENT: production
-  TEST_ENVIRONMENT: test
-  PRODUCTION_ENVIRONMENT: production
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    steps:
+     steps:
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -36,30 +32,14 @@ jobs:
         if: steps.run-tests.outcome == 'success'
         run: npm run check-coverage-deploy
 
-      - name: Login to Test Azure Registry
-        if: ${{ env.DESIRED_ENVIRONMENT == env.TEST_ENVIRONMENT }}
-        uses: azure/docker-login@v1
-        with:
-          login-server: test2dv.azurecr.io
-          username: ${{ secrets.TEST_USERNAME }}
-          password: ${{ secrets.TEST_PASSWORD }}
-
-      - name: Push to Test Azure Registry
-        if: ${{ env.DESIRED_ENVIRONMENT == env.TEST_ENVIRONMENT }}
+      - name: Login to Docker Hub
+        if: steps.check-coverage.outcome == 'success'
         run: |
-          docker build . -t test2dv.azurecr.io/test:latest
-          docker push test2dv.azurecr.io/test:latest
-
-      - name: Login to Production Azure Registry
-        if: ${{ env.DESIRED_ENVIRONMENT == env.PRODUCTION_ENVIRONMENT }}
-        uses: azure/docker-login@v1
-        with:
-          login-server: production2dv.azurecr.io
-          username: ${{ secrets.PRODUCTION_USERNAME }}
-          password: ${{ secrets.PRODUCTION_PASSWORD }}
-
-      - name: Push to Production Azure Registry
-        if: ${{ env.DESIRED_ENVIRONMENT == env.PRODUCTION_ENVIRONMENT }}
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Build and Push Docker Image
+        if: steps.check-coverage.outcome == 'success'
         run: |
-          docker build . -t production2dv.azurecr.io/prod:latest
-          docker push production2dv.azurecr.io/prod:latest
+          docker build -t your-docker-image-name .
+          docker build -t santiosorio1357/api_devops:latest .
+          docker push santiosorio1357/api_devops:latest
